--- a/WebApplicationMVC/Views/Account/Login.cshtml
+++ b/WebApplicationMVC/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
                     </label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Login!!</button>
+            <button type="submit" class="btn btn-primary">Login </button>
         </form>
     </div>
 </div>
